--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -1,8 +1,13 @@
 :root{
     background: radial-gradient(var(--primary), var(--secondary));
 }
+.main_container{
+    width: 100%;
+    height: 100%;
+    margin-top: 50px;
+}
 .for_seo{
-    background: var(--frosted_white);
+    background: var(--frosted_primary);
     color: var(--white);
     width: 90%;
     margin-left: 5%;
@@ -37,7 +42,7 @@
 }
 .featured_card_left{
     display: flex;
-    background: var(--frosted_white);
+    background: var(--frosted_primary);
     flex-direction: column;
     color: var(--white);
     width: 90%;
@@ -52,14 +57,14 @@
 }
 .featured_card_left p{
     justify-content: left;
-    width: 80%;
+    width: 90%;
     max-width: unset;
     margin-left: unset;
-    margin-right: 20%;
+    margin-right: 10%;
 }
 .featured_card_right{
     display: flex;
-    background: var(--frosted_white);
+    background: var(--frosted_primary);
     flex-direction: column;
     color: var(--white);
     width: 90%;
@@ -74,14 +79,34 @@
 }
 .featured_card_right p{
     justify-content: right;
-    width: 80%;
+    width: 90%;
     max-width: unset;
-    margin-left: 20%;
+    margin-left: 10%;
     margin-right: unset;
 }
 /* On hover */
-.featured_card_left:hover, .featured_card_right:hover {
-    transform: scale(1.05);
+.featured_card_left:hover{
     transition: all 0.5s ease-in-out ;
-    background: var(--frosted_primary);
+    width: 95%;
+    margin-right: 5%;
+    border-top-right-radius: 5px;
+    border-bottom-right-radius: 5px;
+    background: var(--frosted_secondary);
+} .featured_card_right:hover {
+    width: 95%;
+    margin-left: 5%;
+    border-top-left-radius: 5px;
+    border-bottom-left-radius: 5px;
+    transition: all 0.5s ease-in-out ;
+    background: var(--frosted_secondary);
+}
+.featured_card_left:hover p{
+    width: 100%;
+    margin-left: unset;
+    margin-right: unset;
+}
+.featured_card_right:hover p{
+    width: 100%;
+    margin-left: unset;
+    margin-right: unset;
 }
