--- a/public/assets/css/navigation.css
+++ b/public/assets/css/navigation.css
@@ -1,26 +1,55 @@
 .header_embedded_navigation {
-    background: var(--frosted_white);
+    background: var(--frosted_primary);
     border-radius: 5px;
     display: flex;
+    flex-direction: row;
 }
 .header_embedded_navigation a:link{
     color: var(--white);
 }
+.navigation_container{
+    display: flex;
+    align-items: center;
+    width: fit-content;
+    margin-left: auto;   /* This pushes the container to the right */
+    margin-right: 0;     /* Ensures no extra space on the right */
+    border-radius: inherit;
+}
+.navigation_button svg{
+    width: 50px;
+    height: 50px;
+    transition: all 0.5s linear;
+}
 .navigation_button{
     display: flex;
-    color: var(--primary);
+    color: var(--secondary);
+    text-align: center;
     border-radius: 5px;
     text-decoration: none;
     background: none;
-    font-size: 28px;
+    font-size: 18px;
     border-radius: inherit;
     margin-left: 5px;
     margin-right: 5px;
-    transition: all 1s  linear;
+    transition: all 0.5s linear;
+    height: inherit;
+    flex-direction: column;
 }
 .navigation_button:hover{
-    background: var(--frosted_primary);
-    color: var(--secondary);
+    color: var(--frosted_primary);
     background: var(--frosted_white);
-    transition: all 1s linear;
+    transition: all 0.5s linear;
+    border-radius: 5px;
+}
+/* Navigation title image */
+.navigation_title img {
+    width: 50px;
+    height: 50px;
+    border-radius: 100vh;
+}
+.navigation_title{
+    background: none;
+    align-items: center;
+    display: flex;
+    margin: 5px ;
 }
