--- a/public/assets/css/LiOS-config.css
+++ b/public/assets/css/LiOS-config.css
@@ -1,5 +1,9 @@
 .hero {
   --lios-card-background: var(--frosted_white);
+  --lios-button-border-width: 2px;
+  --lios-button-border-color: var(--primary);
+  --lios-button-border-radius: 100vh;
+  --lios-button-on-hover-background: var(--secondary);
 }
 .card-container-1 {
   --lios-card-background: var(--frosted_white);
