--- a/public/LiOS.css
+++ b/public/LiOS.css
@@ -3,3 +3,4 @@
 @import url("assets/css/main.css");
 @import url("assets/css/color_palette.css");
 @import url("assets/css/navigation.css");
+@import url("assets/css/windows.css");
