--- a/public/assets/css/color_palette.css
+++ b/public/assets/css/color_palette.css
@@ -1,13 +1,14 @@
-:root{
-    --primary:#9457eb;
-    --secondary:#ff66cc;
-    --white:#e7f1e6;
-    --black:#010101;
-    /* Frosted Colors */
-    --frosted_primary:var(--9457eb);
-    --frosted_secondary:var(--ff66cc);
-    --frosted_white:var(--e7f1e6);
-    --frosted_black:var(--010101);
-    /* mouse cursor gradient tracking */
-    --mouse_cursor_gradient_tracking:var(--primary);
+:root {
+  --primary: #9457eb;
+  --secondary: #ff66cc;
+  --white: #e7f1e6;
+  --black: #010101;
+  --red: #980002;
+  /* Frosted Colors */
+  --frosted_primary: var(--9457eb);
+  --frosted_secondary: var(--ff66cc);
+  --frosted_white: var(--e7f1e6);
+  --frosted_black: var(--010101);
+  /* mouse cursor gradient tracking */
+  --mouse_cursor_gradient_tracking: var(--primary);
 }
