--- a/public/assets/css/LiOS-config.css
+++ b/public/assets/css/LiOS-config.css
@@ -11,3 +11,9 @@
   --lios-button-border-width: 2px;
   --lios-button-border-color: var(--primary);
 }
+nav{
+  --lios-header-nav-2-background: var(--frosted_white);
+  --lios-header-nav-2-component-size: 42px;
+  --lios-header-nav-2-color: var(--primary);
+  --lios-header-nav-2-hover-color: var(--secondary);
+}
