--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -2,11 +2,13 @@
   background: radial-gradient(var(--primary), var(--secondary));
 }
 .hero {
-  color: var(--white);
+  color: var(--black);
   text-align: center;
+  border: 2px outset var(--frosted_white);
+  box-sizing: border-box;
 }
 .card-container-1 {
-  color: var(--white);
+  color: var(--black);
   text-align: center;
   justify-content: center;
 }
@@ -14,6 +16,8 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  border: 2px outset var(--frosted_white);
+  box-sizing: border-box;
 }
 .card-container-1 .lios-card hr{
   width: 100%;
